First stab at a "unified" target.

--- a/bun-cjs/package.json
+++ b/bun-cjs/package.json
@@ -2,7 +2,7 @@
   "name": "bun-smoketest",
   "main": "index.cts",
   "dependencies": {
-    "foo-wasm": "file:../foo-wasm/pkg-nodejs"
+    "foo-wasm": "file:../foo-wasm/pkg-unified"
   },
   "devDependencies": {
     "@types/bun": "latest"
