--- a/nodejs-esm/package.json
+++ b/nodejs-esm/package.json
@@ -7,7 +7,7 @@
   },
   "type": "module",
   "dependencies": {
-    "foo-wasm": "file:../foo-wasm/pkg-nodejs"
+    "foo-wasm": "file:../foo-wasm/pkg-unified"
   },
   "author": "",
   "description": ""
