--- a/foo-wasm/pkg-bundler/package.json
+++ b/foo-wasm/pkg-bundler/package.json
@@ -8,8 +8,7 @@
     "foo_wasm_bg.js",
     "foo_wasm.d.ts"
   ],
-  "browser": "foo_wasm.js",
-  "main": "foo_wasm_fs.js",
+  "main": "foo_wasm.js",
   "types": "foo_wasm.d.ts",
   "sideEffects": [
     "./foo_wasm.js",
